project(LossHD VERSION "1.0.0")
cmake_minimum_required(VERSION 3.18)
set(CMAKE_CXX_FLAGS "-O3")
include_directories(deps)
add_subdirectory(deps/libpqxx build-pqxx)
add_executable(losshd losshd.cpp options.cpp)
set_property(TARGET losshd PROPERTY CXX_STANDARD 20)
set_property(TARGET losshd PROPERTY CXX_STANDARD_REQUIRED On)
set_property(TARGET losshd PROPERTY CXX_EXTENSIONS Off)
find_package(Boost REQUIRED program_options)
target_link_libraries(losshd PRIVATE pqxx boost_program_options)
add_executable(getloss getloss.cpp options.cpp)
set_property(TARGET getloss PROPERTY CXX_STANDARD 20)
set_property(TARGET getloss PROPERTY CXX_STANDARD_REQUIRED On)
set_property(TARGET getloss PROPERTY CXX_EXTENSIONS Off)
target_link_libraries(getloss PRIVATE pqxx boost_program_options)
